k8s/app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: internship
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
---
apiVersion: v1
kind: Namespace
metadata:
  name: loki
